--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -29,7 +29,6 @@
     <string name="printer_offline" msgid="9196864753298645066">"គ្មានអ៊ីនធឺណិត"</string>
     <string name="printer_check" msgid="6428369671197132828">"ពិនិត្យ​ម៉ាស៊ីនបោះពុម្ព"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"កំពុងរង់ចាំផ្ញើ"</string>
-    <string name="wifi_not_connected" msgid="8644760246612043851">"មិនមានការតភ្ជាប់ Wi-Fi ទេ"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"មិនអាច​អាន​ឯកសារ​បាន​ទេ"</string>
     <string name="media_size_l" msgid="164416542021598181">"L"</string>
     <string name="media_size_5x7in" msgid="1275128379533195285">"5x7 អ៊ិន្ឈ៍"</string>
@@ -38,12 +37,39 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 អ៊ិន្ឈ៍"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 អ៊ិន្ឈ៍"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <string name="title_activity_add_printer" msgid="3971541707589830268">"បានបញ្ចូលម៉ាស៊ីនបោះពុម្ពដោយផ្ទាល់"</string>
-    <string name="add_manual_printer" msgid="3990455596246121671">"បញ្ចូលម៉ាស៊ីនបោះពុម្ពដោយផ្ទាល់"</string>
+    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
+    <skip />
+    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
+    <skip />
     <string name="hostname_or_ip" msgid="3460546103553992915">"ឈ្មោះម៉ាស៊ីន ឬអាសយដ្ឋាន IP"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"បញ្ចូល"</string>
+    <!-- no translation found for add_named (9074106244018070583) -->
+    <skip />
     <string name="no_printer_found" msgid="4777867380924351173">"រកមិនឃើញ​ម៉ាស៊ីន​បោះពុម្ព​តាមរយៈ​អាសយដ្ឋាននេះ​ទេ"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"មិនស្គាល់ម៉ាស៊ីនបោះពុម្ពទេ"</string>
-    <string name="forget_printer" msgid="7287993564179837445">"បំភ្លេច​​ម៉ាស៊ីន​បោះពុម្ព"</string>
+    <!-- no translation found for wifi_direct (4629404342852294985) -->
+    <skip />
+    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
+    <skip />
+    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
+    <skip />
+    <!-- no translation found for searching (2114018057619514587) -->
+    <skip />
+    <!-- no translation found for connect_hint_text (587112503851044234) -->
+    <skip />
+    <!-- no translation found for connecting_to (2665161014972086194) -->
+    <skip />
+    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
+    <skip />
+    <!-- no translation found for failed_connection (8068661997318286575) -->
+    <skip />
+    <!-- no translation found for saved_printers (4567534965213125526) -->
+    <skip />
+    <!-- no translation found for forget (892068061425802502) -->
+    <skip />
+    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
+    <skip />
+    <!-- no translation found for connects_via_network (5990041581556733898) -->
+    <skip />
 </resources>
